--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -27,5 +27,6 @@
  <script type="text/javascript" src="static/js/config.js"></script>
   <!-- Our JavaScript -->
   <script type="text/javascript" src="static/js/logic.js"></script>
+  <!-- <script type="text/javascript" src="static/js/holder.js"></script> -->
 </body>
 </html>
